# nyxforge

./: .gitignore  Cargo.toml  README.md  coin-agnostic-smart-contracts.md  nyxforge  run.sh
.claude/: settings.json
crates/nyxforge-cli/: Cargo.toml
crates/nyxforge-cli/src/: ai_client.rs  main.rs  mcp_client.rs  rpc_client.rs
crates/nyxforge-cli/src/commands/: bond.rs  mcp.rs  mod.rs
crates/nyxforge-contract/: Cargo.toml
crates/nyxforge-contract/src/: bond_market.rs  lib.rs  order_book.rs  settlement.rs
crates/nyxforge-core/: Cargo.toml
crates/nyxforge-core/src/: bond.rs  error.rs  lib.rs  market.rs  oracle_spec.rs  types.rs
crates/nyxforge-mcp/: Cargo.toml
crates/nyxforge-mcp/src/: config.rs  main.rs  provider.rs  server.rs
crates/nyxforge-miner/: Cargo.toml
crates/nyxforge-miner/src/: darkfi.rs  hasher.rs  lib.rs  p2pool.rs  stats.rs  worker.rs
crates/nyxforge-node/: Cargo.toml
crates/nyxforge-node/src/: main.rs  miner.rs  p2p.rs  rpc.rs  state.rs  sync.rs  wallet_manager.rs
crates/nyxforge-oracle/: Cargo.toml
crates/nyxforge-oracle/src/: lib.rs  main.rs  oracle.rs  verifier.rs
crates/nyxforge-test-fixtures/: Cargo.toml
crates/nyxforge-test-fixtures/src/: attestations.rs  bonds.rs  lib.rs  mock_oracle.rs  mock_rpc.rs  notes.rs  proofs.rs
crates/nyxforge-wallet/: Cargo.toml
crates/nyxforge-wallet/src/: balance.rs  keys.rs  lib.rs  storage.rs
crates/nyxforge-wallet/src/drk/: mod.rs  wallet.rs
crates/nyxforge-wallet/src/xmr/: mod.rs  remote.rs  scanner.rs  source.rs  tx_builder.rs
crates/nyxforge-web/: Cargo.toml
crates/nyxforge-web/src/: client.rs  lib.rs  ui.rs  wallet.rs
crates/nyxforge-zk/: Cargo.toml
crates/nyxforge-zk/benches/: zk_proofs.rs
crates/nyxforge-zk/src/: burn.rs  lib.rs  mint.rs  note.rs  params.rs  primitives.rs  transfer.rs
crates/nyxforge-zk/src/circuit/: burn.rs  mint.rs  mod.rs  transfer.rs
doc/: log-claude-2026-03-06.md
docs/: ao-strategy.md  architecture.md  bond-lifecycle.md  funding-strategy.md  liquidity-interop.md  long-now-oracles.md  oracle-spec.md  privacy-design.md  roadmap.md  spec-summary.md  spec.md  test-plan.md  tutorial-cakewallet.md  tutorial-retoswap.md  tutorial-vexl.md  tutorial-xmrbazaar.md  user-manual.md  zk-design.md
docs/background-notes/: README.md  anonymous-oracles.md  horesh-peacebonds-summary.md  horesh-spb-summary.md
scripts/: build-web.sh  dev-start.sh  install-flutter.sh  install-playwright.sh  install-rust-wasm.sh  install-stagenet-mining.sh  nyxforge-clean.sh  seed-demo-bonds.py  setup-dev.sh  setup-gmail-credentials.sh  stagenet-mining.sh  test-report.sh
scripts/hooks/: pre-commit
ui/: README.md  package.json  playwright.config.ts  pubspec.yaml
ui/lib/: main.dart
ui/lib/src/: bond_market_screen.dart  home_screen.dart  issue_bond_screen.dart  mine_screen.dart  node_client.dart  theme.dart  wallet_screen.dart
ui/test/: widget_test.dart
ui/tests/e2e/: navigation.spec.ts  node_status.spec.ts  splash.spec.ts
ui/tests/helpers/: flutter_wait.ts
ui/web/: index.html  manifest.json
