[workspace]
resolver = "2"
members = [
    "crates/nyxforge-core",
    "crates/nyxforge-zk",
    "crates/nyxforge-contract",
    "crates/nyxforge-node",
    "crates/nyxforge-oracle",
    "crates/nyxforge-web",
    "crates/nyxforge-wallet",
    "crates/nyxforge-miner",
    "crates/nyxforge-cli",
    "crates/nyxforge-mcp",
    "crates/nyxforge-test-fixtures",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["nyxforge contributors"]
license     = "AGPL-3.0"
repository  = "https://github.com/archerships/nyxforge"
rust-version = "1.79"

[workspace.dependencies]
# DarkFi SDK — anonymous ZK contracts, P2P, crypto primitives
# Pinned to testnet branch; update as DarkFi stabilises
darkfi = { git = "https://codeberg.org/darkrenaissance/darkfi", branch = "master" }
darkfi-sdk = { git = "https://codeberg.org/darkrenaissance/darkfi", branch = "master" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"

# Cryptography (supplements DarkFi primitives)
blake3 = "1"
sha2 = "0.10"
rand = "0.8"
rand_core = "0.6"
zeroize = { version = "1", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# P2P / networking
libp2p = { version = "0.53", features = [
    "tcp", "noise", "yamux", "gossipsub", "kad", "identify",
    "request-response", "macros",
] }
multiaddr = "0.18"

# Time
chrono = { version = "0.4", features = ["serde"] }

# WASM bridge
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "console", "Storage",
] }
js-sys = "0.3"

# Numeric
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Monero wallet + mining
monero      = { version = "0.21", features = ["serde"] }
randomx-rs  = "1"
async-trait = "0.1"

# CLI tooling
dialoguer = "0.11"
colored   = "2"
hex       = "0.4"

# Lazy statics (used in test fixtures)
once_cell = "1"

# Test utilities
tempfile = "3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"    # smaller WASM

[profile.dev]
opt-level = 1
