[package]
name        = "nyxforge-cli"
description = "Command-line interface for the NyxForge bond market node"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "nyxforge-cli"
path = "src/main.rs"

[dependencies]
nyxforge-core = { path = "../nyxforge-core" }

clap         = { version = "4", features = ["derive", "env"] }
reqwest      = { version = "0.12", features = ["json"] }
dialoguer    = { workspace = true }
colored      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tokio        = { workspace = true }
chrono       = { workspace = true }
rust_decimal = { workspace = true }
hex          = { workspace = true }
