[package]
name        = "nyxforge-core"
description = "Bond primitives, market types, and shared protocol definitions"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
bincode      = { workspace = true }
blake3       = { workspace = true }
rand         = { workspace = true }
zeroize      = { workspace = true }
anyhow       = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
rust_decimal = { workspace = true }
tracing      = { workspace = true }
