[package]
name        = "nyxforge-mcp"
description = "AI-agnostic MCP server for NyxForge"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[[bin]]
name = "nyxforge-mcp"
path = "src/main.rs"

[dependencies]
anyhow             = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
axum               = "0.7"
reqwest            = { version = "0.12", features = ["json"] }
clap               = { version = "4", features = ["derive", "env"] }
