[package]
name        = "nyxforge-web"
description = "Browser WASM frontend for the NyxForge bond market"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nyxforge-core = { path = "../nyxforge-core" }
nyxforge-zk   = { path = "../nyxforge-zk" }

wasm-bindgen         = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys              = { workspace = true }
js-sys               = { workspace = true }
serde                = { workspace = true }
serde_json           = { workspace = true }
anyhow               = { workspace = true }
tracing              = { workspace = true }

# WASM-compatible async: no threads
gloo-net = { version = "0.5", features = ["http"] }
gloo-storage = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
